--- a/centos7/httpd/conf.d/ssl.conf
+++ b/centos7/httpd/conf.d/ssl.conf
@@ -78,7 +78,8 @@ SSLProtocol all -SSLv2 -SSLv3
 #   List the ciphers that the client is permitted to negotiate.
 #   See the mod_ssl documentation for a complete list.
 # SSLCipherSuite HIGH:3DES:!aNULL:!MD5:!SEED:!IDEA
-SSLCipherSuite aNULL:HIGH:3DES:MD5:SEED:IDEA
+# SSLCipherSuite MEDIUM:!3DES:!IDEA
+SSLCipherSuite MEDIUM:!aNULL
 
 #   Speed-optimized SSL Cipher configuration:
 #   If speed is your main concern (on busy HTTPS servers e.g.),
